# TensorRT

./: MODULE.bazel
py/torch_tensorrt/dynamo/: _compiler.py
